--- a/router-compiler/build.gradle
+++ b/router-compiler/build.gradle
@@ -8,4 +8,4 @@ dependencies {
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
-apply from: 'upload.gradle'
+//apply from: 'upload.gradle'
