--- a/router-api/upload.gradle
+++ b/router-api/upload.gradle
@@ -19,6 +19,14 @@ uploadArchives {
                 description rootProject.ext.router_api.description
                 packaging "aar"
             }
+            pom.whenConfigured { pom ->
+                pom.dependencies.forEach { dep ->
+                    if (dep.getVersion() == "unspecified") {
+                        println("--modify the dependenies module in pom.xml--->>" + dep.getArtifactId())
+                        dep.setVersion(VERSION)
+                    }
+                }
+            }
         }
     }
 }
