处理上传maven库时，xxx:unspecified...错误

--- a/router-remote/build.gradle
+++ b/router-remote/build.gradle
@@ -30,4 +30,4 @@ dependencies {
     api 'com.okay.router:router-api:1.0.0-20190724.025004-3'
 }
 
-apply from: 'upload.gradle'
+//apply from: 'upload.gradle'
