--- a/router-api/build.gradle
+++ b/router-api/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     //api project(':router-annotation')
+    implementation "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
     api 'com.okay.router.annotation:router-annotation:1.+'
 
 }
