--- a/router-api/build.gradle
+++ b/router-api/build.gradle
@@ -34,8 +34,8 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     implementation "com.android.support:support-annotations:${rootProject.ext.supportLibVersion}"
-    api project(':router-annotation')
-    //api 'com.github.mr-woody.OkSuperRoute:router-annotation:1.0.0'
+    //api project(':router-annotation')
+    api 'com.github.mr-woody.OkSuperRoute:router-annotation:1.0.1'
 
 }
 
